# marlim3

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  _version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  python-publish.yml
demos/: 2zonas-2VGLs-2-Check-AS.json  2zonas-2VGLs-2-Check-correcPerfTerm.json  BCS-longo-eficMotor.json  PVTSIM-MARLIM.tab  injec-Liq-TempoResidencia.json  leituraAS.json  parada-longo-Combinado-BCS-GLC-PIG-completo.json  producaoSimplificado.json
docs/: schema_tramo.json
docs/tutoriais/: analise_nodal.ipynb  caso_base1_tutoriais.json  caso_base_vgl_tutoriais.json  comparacao_horizontal_vertical.ipynb  gas_lift.ipynb
marlim3/: __init__.py  _download.py
marlim3/_cenarios/: _cenarios.py
marlim3/_plots/: _plots_perfis.py  (+3 more)
src/: Acidentes2.cpp  Acidentes2.h  Bcsm2.cpp  Bcsm2.h  BlackOilFromCompositional.f90  BlackOilModels.f90  BombaVol.cpp  BombaVol.h  BombaVolVap.cpp  BombaVolVap.h  Constants.f90  Elem2D.cpp  Elem2D.h  Elem2DPoisson.cpp  Elem2DPoisson.h  Elem2DPoroso.cpp  Elem2DPoroso.h  Elem3DPoisson.cpp  Elem3DPoisson.h  FA_Hidratos.cpp  FA_Hidratos.h  FA_Hidratos_Servico.cpp  FA_Hidratos_Servico.h  FerramentasNumericas.cpp  FerramentasNumericas.h  FlashExtras.f90  FonteMas.cpp  FonteMas.h  FonteMasVap.cpp  FonteMasVap.h  FonteMassCHK.cpp  FonteMassCHK.h  Geometria.h  GeometriaPoro.h  GradientCorrelations.cpp  GradientCorrelations.h  JSONDataModel.cpp  JSONDataModel.h  JSON_entrada.cpp  JSON_entrada.h  (+96 more)
tests/: test_configure_simulation.py  test_demos.py  test_demos_steady_state.py  test_marlim3.py
(+4 files in other folders)
